--- a/package.json
+++ b/package.json
@@ -2,18 +2,30 @@
   "name": "assignment_02_vehicle_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tsx watch ./src/server.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mushfiqur2002/assignment_02_vehicle_rental_api.git"
   },
   "keywords": [],
-  "author": "md. mushfiqur rahman",
+  "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "dependencies": {
+  "bugs": {
+    "url": "https://github.com/mushfiqur2002/assignment_02_vehicle_rental_api/issues"
+  },
+  "homepage": "https://github.com/mushfiqur2002/assignment_02_vehicle_rental_api#readme",
+  "devDependencies": {
     "@types/node": "^24.10.1",
-    "env": "^0.0.2",
-    "express": "^5.2.1",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   }
 }
