--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/mushfiqur2002/assignment_02_vehicle_rental_api#readme",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
